--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-babel": "^6.0.2",
     "@sveltejs/vite-plugin-svelte": "^1.3.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
