--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "webkit-line-clamp": "^1.2.2"
   }
 }
